--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,9 @@ import Card from '../components/Card.astro';
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Aukusti Website</title>
-</head>  
+</head>
 <body>
-	<div class="container md:container md:mx-auto bg-slate-800 bg-cover">
+	<div class=" container w-screen h-screen md:container md:mx-auto bg-slate-800 bg-cover">
 		<div>
 			<h1 class="text-4xl text-orange-500">Hello my name is Aukusti Palomäki</h1>
 		</div>
