+icons and introduction

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,37 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
+import Icon from "astro-icon"
 ---
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Aukusti Website</title>
-</head>
-<body>
-	<div class=" container w-screen h-screen md:container md:mx-auto bg-slate-800 bg-cover">
-		<div>
-			<h1 class="text-4xl text-orange-500">Hello my name is Aukusti Palomäki</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aukusti Website</title>
+  </head>
+  <body>
+    <main class="w-screen min-h-screen md:mx-auto bg-white bg-cover">
+      <section class="min-h-screen">
+        <nav class="py-10 mb-12 flex justify-between">
+          <h1 class="text-4xl text-orange-500">Web developer</h1>
+          <ul class="flex items-center">
+            <li>nightmode</li>
+          </ul>
+        </nav>
+        <div class="text-center">
+          <p class="text-4xl text-orange-500">Aukusti Palomäki</p>
+          <p class="text-3xl text-gray-700">Front-end enjoyer</p>
+		  <p class="text-2xl text-gray-700">life full of music and books to read<br /> while discovering the wide web</p>
+        </div>
+		<div class="text-3xl flex justify-center gap-16 py-3">
+			<Icon name="mdi:github" width="3rem" height="3rem" />
+			<Icon name="mdi:linkedin" width="3rem" height="3rem" />
+			<Icon name="fa-brands:lastfm-square" width="2.9rem" height="2.9rem" />
 		</div>
-	</div>
-</body>
+      </section>
+    </main>
+  </body>
 </html>
