--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,9 +27,9 @@ import Icon from "astro-icon"
 		  <p class="text-2xl text-gray-700">life full of music and books to read<br /> while discovering the wide web</p>
         </div>
 		<div class="text-3xl flex justify-center gap-16 py-3">
-			<Icon name="mdi:github" width="3rem" height="3rem" />
+			<a href="https://github.com/daupa001xamk" target="_blank"><Icon name="mdi:github" width="3rem" height="3rem" /></a>
 			<Icon name="mdi:linkedin" width="3rem" height="3rem" />
-			<Icon name="fa-brands:lastfm-square" width="2.9rem" height="2.9rem" />
+			<a href="https://www.last.fm/user/MrAkuu" target="_blank"><Icon name="fa-brands:lastfm-square" width="2.9rem" height="2.9rem" /></a>
 		</div>
       </section>
     </main>
