--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,16 +31,28 @@ import Icon from "astro-icon";
                 wide web
               </p>
             </div>
-            <div class="text-3xl gap-16 py-3 flex justify-center">
+            <div class="text-3xl m-10 py-3 flex justify-center gap-10">
               <a href="https://github.com/daupa001xamk" target="_blank"
-                ><Icon name="mdi:github" width="3rem" height="3rem" /></a
+                ><Icon
+                  class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                  name="mdi:github"
+                  width="3rem"
+                  height="3rem"
+                /></a
               >
-              <Icon name="mdi:linkedin" width="3rem" height="3rem" />
+              <a href="" target="_blank">
+                <Icon
+                  class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                  name="mdi:linkedin"
+                  size="3rem"
+                /></a
+              >
               <a href="https://www.last.fm/user/MrAkuu" target="_blank"
                 ><Icon
+                  class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
                   name="fa-brands:lastfm-square"
-                  width="2.9rem"
-                  height="2.9rem"
+                  width="2.8rem"
+                  height="2.8rem"
                 /></a
               >
             </div>
