--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import Icon from "astro-icon";
           </ul>
         </nav>
         <main class="flex justify-center">
-          <div class="w-1/2 p-10 rounded-md overflow-hidden shadow-xl">
+          <div class="w-1/2 p-10 rounded-md  shadow-xl">
             <div class="text-center">
               <p class="text-4xl text-orange-500">Aukusti Palomäki</p>
               <p class="text-3xl text-gray-700">Front-end enjoyer</p>
