--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 import Icon from "astro-icon";
+//https://icon-sets.iconify.design/
 ---
 
 <!DOCTYPE html>
@@ -14,51 +15,94 @@ import Icon from "astro-icon";
   </head>
   <body>
     <div class="w-screen min-h-screen md:mx-auto bg-white bg-cover">
-      <div class="min-h-screen">
-        <nav class="py-10 mb-12 flex justify-between">
-          <h1 class="text-4xl text-orange-500">Web developer</h1>
-          <ul class="flex items-center">
-            <li>nightmode</li>
-          </ul>
-        </nav>
-        <main class="flex justify-center">
-          <div class="w-1/2 p-10 rounded-md  shadow-xl">
-            <div class="text-center">
-              <p class="text-4xl text-orange-500">Aukusti Palomäki</p>
-              <p class="text-3xl text-gray-700">Front-end enjoyer</p>
-              <p class="text-2xl text-gray-700">
-                life full of music and books to read<br /> while discovering the
-                wide web
-              </p>
+      <!--Nav Bar -->
+      <nav class="py-10 mb-12 flex justify-between">
+        <h1 class="text-4xl text-orange-500">Web developer</h1>
+        <ul class="flex items-center">
+          <li>nightmode</li>
+        </ul>
+      </nav>
+      <!--Main Card -->
+      <main class="flex justify-center flex-row">
+        <div class="w-1/2 p-10 rounded-md shadow-xl">
+          <div class="text-center">
+            <p class="text-4xl text-orange-500">Aukusti Palomäki</p>
+            <p class="text-3xl text-gray-700">Front-end enjoyer</p>
+            <p class="text-2xl text-gray-700">
+              life full of music and books to read<br /> while discovering the wide
+              web
+            </p>
+          </div>
+          <!--Links -->
+          <div class="text-3xl m-10 py-3 flex justify-center gap-10">
+            <a href="https://github.com/daupa001xamk" target="_blank"
+              ><Icon
+                class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                name="mdi:github"
+                width="3rem"
+                height="3rem"
+              /></a
+            >
+            <a href="" target="_blank">
+              <Icon
+                class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                name="mdi:linkedin"
+                size="3rem"
+              /></a
+            >
+            <a href="https://www.last.fm/user/MrAkuu" target="_blank"
+              ><Icon
+                class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                name="fa-brands:lastfm-square"
+                width="2.8rem"
+                height="2.8rem"
+              /></a
+            >
+          </div>
+        </div>
+      </main>
+      <!--Projects card -->
+      <section class="flex justify-center flex-row py-15">
+        <div class="w-1/2 p-10 rounded-md shadow-xl">
+          <div class="text-center">
+            <p class="text-4xl text-orange-500">Projects</p>
+            <div class="flex justify-start gap-5 items-center">
+              <Icon
+                class="hover:-translate-y-1 hover:scale-100 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                name="ic:outline-menu-book"
+                width="2.8rem"
+                height="2.8rem"
+              />
+              <p class="text-2xl text-gray-700">WNDeepLReader</p>
             </div>
-            <div class="text-3xl m-10 py-3 flex justify-center gap-10">
-              <a href="https://github.com/daupa001xamk" target="_blank"
-                ><Icon
-                  class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
-                  name="mdi:github"
-                  width="3rem"
-                  height="3rem"
-                /></a
-              >
-              <a href="" target="_blank">
-                <Icon
-                  class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
-                  name="mdi:linkedin"
-                  size="3rem"
-                /></a
-              >
-              <a href="https://www.last.fm/user/MrAkuu" target="_blank"
-                ><Icon
-                  class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
-                  name="fa-brands:lastfm-square"
-                  width="2.8rem"
-                  height="2.8rem"
-                /></a
-              >
+            <div class="flex justify-start gap-5 items-center py-5">
+              <Icon
+                class="hover:-translate-y-1 hover:scale-100 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                name="ic:baseline-library-music"
+                width="2.8rem"
+                height="2.8rem"
+              />
+              <p class="text-2xl text-gray-700">MusicManager</p>
             </div>
           </div>
-        </main>
-      </div>
+        </div>
+      </section>
+      <!--Bio -->
+      <section class="flex justify-center flex-row py-15">
+        <div class="w-1/2 p-10 rounded-md shadow-xl">
+          <div class="text-center">
+            <p class="text-2xl text-gray-700">
+              Interested in <a href="#"
+                ><p class="text-2xl text-blue-400">design</p></a
+              >
+              <p class="text-2xl text-orange-600">programming</p>Now I have
+              gotten to the point of programming myself and thinking Design all
+              the time while listening all kinds of music from rock to nu-metal
+              to math-rock.
+            </p>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
