--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,43 +66,99 @@ import Icon from "astro-icon";
         <div class="w-1/2 p-10 rounded-md shadow-xl">
           <div class="text-center">
             <p class="text-4xl text-orange-500">Projects</p>
-            <div class="flex justify-start gap-5 items-center">
-              <Icon
-                class="hover:-translate-y-1 hover:scale-100 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
-                name="ic:outline-menu-book"
+            <div class="flex justify-between items-center py-5">
+              <div class="flex py-5 items-center">
+                <Icon
+                  class="hover:-translate-y-1 hover:scale-100 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                  name="ic:outline-menu-book"
+                  width="2.8rem"
+                  height="2.8rem"
+                />
+                <p class="text-2xl px-3 text-gray-700">WNDeepLReader</p>
+              </div>
+              <div class="flex py-5 items-center">
+                <Icon
+                name="mdi:react"
                 width="2.8rem"
                 height="2.8rem"
-              />
-              <p class="text-2xl text-gray-700">WNDeepLReader</p>
+                />
+                <Icon
+                name="tabler:api"
+                width="2.8rem"
+                height="2.8rem"
+                />
+                <div>
+              </div>
+              <p class="text-2xl px-3 text-gray-700">(In progress)
+              </div>
             </div>
-            <div class="flex justify-start gap-5 items-center py-5">
+            <div class="flex justify-between items-center py-5">
+            <div class="flex py-5 items-center">
               <Icon
                 class="hover:-translate-y-1 hover:scale-100 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
                 name="ic:baseline-library-music"
                 width="2.8rem"
                 height="2.8rem"
               />
-              <p class="text-2xl text-gray-700">MusicManager</p>
+              <p class="text-2xl px-3 text-gray-700">Music player</p>
+            </div>
+            <div class="flex py-5 items-center">
+              <Icon
+              name="cib:kotlin"
+              width="1.8rem"
+              height="1.8rem"
+              />
+              <div>
+              <p class="text-2xl px-3 text-gray-700">(Starting)
+              </div>
             </div>
           </div>
         </div>
-      </section>
-      <!--Bio -->
-      <section class="flex justify-center flex-row py-15">
-        <div class="w-1/2 p-10 rounded-md shadow-xl">
-          <div class="text-center">
-            <p class="text-2xl text-gray-700">
-              Interested in <a href="#"
-                ><p class="text-2xl text-blue-400">design</p></a
-              >
-              <p class="text-2xl text-orange-600">programming</p>Now I have
-              gotten to the point of programming myself and thinking Design all
-              the time while listening all kinds of music from rock to nu-metal
-              to math-rock.
-            </p>
+            <div class="flex justify-between items-center py-5">
+              <div class="flex py-5 items-center">
+              <Icon
+                class="hover:-translate-y-1 hover:scale-100 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                name="ri:todo-fill"
+                width="2.8rem"
+                height="2.8rem"
+              />
+              <p class="text-2xl px-3 text-gray-700">Time manager / diary</p>
+            </div>
+            <div class="flex py-5 items-center">
+              <Icon
+              name="simple-icons:csharp"
+              width="2.8rem"
+              height="2.8rem"
+              />
+              <div>
+              <p class="text-2xl px-3 text-gray-700">(Starting)
+              </div>
+            </div>
+          </div>
+          <div class="flex justify-between items-center py-5">
+            <div class="flex py-5 items-center">
+            <Icon
+              class="hover:-translate-y-1 hover:scale-100 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+              name="iconoir:www"
+              width="2.8rem"
+              height="2.8rem"
+            />
+            <p class="text-2xl px-3 text-gray-700">This website</p>
+          </div>
+          <div class="flex py-5 items-center">
+            <Icon
+            name="simple-icons:astro"
+            width="2.8rem"
+            height="2.8rem"
+            />
+            <div>
+            <p class="text-2xl px-3 text-gray-700">(ongoing)
+            </div>
           </div>
         </div>
+        </div>
       </section>
+      <!--  -->
     </div>
   </body>
 </html>
