--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,14 +5,19 @@ import Icon from "astro-icon";
 import { Image } from "astro:assets";
 import localAvatarImage from "../img/avatar.jpg"
 import worksetupImage from "../img/worksetup.jpg"
-import introvertAboutImage from "../img/introvertAbout.jpg"
 import BassguitarImage from "../img/bassguitar.jpg"
 import SwitchImage from "../img/switch.jpg"
 //https://icon-sets.iconify.design/
+
+
+
+
+
+
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 
 <head>
   <meta charset="UTF-8" />
@@ -20,20 +25,35 @@ import SwitchImage from "../img/switch.jpg"
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aukusti Website</title>
 </head>
+<script>
+  const darkModeToggle = document.getElementById("dark-mode-toggle");
 
+if (darkModeToggle) {
+  darkModeToggle.addEventListener("click", () => {
+    const app = document.querySelector("html");
+    if (app) {
+      app.classList.toggle("dark");
+    }
+  });
+}
+</script>
 <body>
-  <div class="w-screen min-h-screen bg-slate-600 bg-cover">
-    <div class="py-10 mb-12">
+  <div class="w-screen min-h-screen bg-amber-100 dark:bg-slate-600 bg-cover">
+    <div class="py-10 mb-12 flex justify-end ">
+      <button id="dark-mode-toggle" class="px-4 py-2 mr-6 bg-gray-700 text-white dark:bg-amber-100 dark:text-gray-800 rounded-lg hover:-translate-y-1 dark:hover:bg-orange-600 hover:bg-orange-600 hover:rounded-xl">
+        <Icon
+        name="mdi:theme-light-dark" width="2.8rem" height="2.8rem" />
+      </button>
     </div>
     <!--Main Card -->
     <div class="flex justify-center">
-      <div class=" p-10 rounded-2xl shadow-xl flex justify-between bg-gray-700 w-1/2 ">
-        <div class="text-center ml-16">
+      <div class=" p-10 rounded-2xl shadow-xl xl:flex bg-amber-200 dark:bg-gray-700 xl:w-1/2 ">
+        <div class="text-center xl:ml-16">
           <div class="text-orange-500">
             <h1 class="text-5xl mt-10">Aukusti Palomäki</h1>
             <p class="text-4xl">Web developer</p>
           </div>
-          <div class="text-gray-200">
+          <div class="dark:text-gray-200">
             <p class="text-4xl">Front-end enjoyer</p>
             <p class="text-3xl">
               Life is full of music and books to read<br /> while discovering the world wide web
@@ -45,21 +65,23 @@ import SwitchImage from "../img/switch.jpg"
             <a class="m-2" href="#projects">Projects</a>
           </nav>
         </div>
-        <Image src={localAvatarImage} alt={"avatar image"} class="w-64 h-64 rounded-full ml-3 mt-5" />
+        <Image src={localAvatarImage} alt={"avatar image"} class="xl:w-64 xl:h-64 rounded-full mt-5 ml-auto mr-auto" />
       </div>
 
 
     </div>
     <!-- about -->
     <div class="flex justify-center pt-6" id="about">
-      <div class="p-10 rounded-2xl w-1/2 shadow-xl flex-row bg-gray-700 ">
+      <div class="p-10 rounded-2xl xl:w-1/2 shadow-xl flex-row bg-amber-200 dark:bg-gray-700 ">
         <div class="">
           <h2 class="text-center text-5xl text-orange-500 mb-5 ">About me!</h2>
-          <div class="text-left text-gray-200 text-2xl">
+          <div class="text-center xl:text-left dark:text-gray-200 text-2xl">
+
+            
             <p class="mb-5">Hello there! I'm a passionate individual who finds joy in a variety of creative and
               intellectual
               pursuits. Music, coding, and reading are my cherished companions in the journey of life.</p>
-            <p class="mb-5">What comes to hobbies, I have always listened to music. Not only do I indulge in the sounds
+            <p class="mb-5">What comes to hobbies, I have always listened to music. Not only do I induxle in the sounds
               of all kinds of genres,
               but I also like to pick up my bass guitar from time to time to play around with.</p>
             <div class=" mb-5">
@@ -70,17 +92,18 @@ import SwitchImage from "../img/switch.jpg"
                 development, I've been gradually immersing myself in the world of back-end development and the art of
                 unit
                 testing. The ever-evolving nature of technology keeps me motivated, and the challenges it brings.</p>
-              <Image src={worksetupImage} alt={"avatar image"} class="h-96 rounded-3xl ml-3 mt-10" />
+              <Image src={worksetupImage} alt={"avatar image"} class="xl:h-96 rounded-3xl mt-10 ml-auto mr-auto" />
             </div>
             <!-- Freetime -->
-            <div class="flex justify-between mb-5">
+            <div class="xl:flex justify-between mb-5">
+              <div class="flex flex-col justify-center">
               <p class="mt-20">In my free time, I'll be reading something. Reading is my escape into different
                 worlds, a way to spent free time and feel like I have achieved something for the day. Coupled with
                 listening music, it creates the
-                perfect backdrop for moments of relaxation and introspection.
+                perfect backdrop for moments of relaxation and introspection. Other than reading or listening to music I used to play a lot of Osu!, a rhythm game, but now I play it now and then.
               </p>
-
-              <Image src={BassguitarImage} alt={"Bass guitar image"} class="w-64 h-72 rounded-3xl ml-3 mt-5" />
+            </div>
+              <Image src={BassguitarImage} alt={"Bass guitar image"} class="h-96 rounded-3xl mt-5 ml-auto mr-auto" />
             </div>
             <!-- Introvert -->
             <div class="flex justify-between mb-5">
@@ -88,7 +111,7 @@ import SwitchImage from "../img/switch.jpg"
                 independently,
                 finding creative solutions and taking full responsibility for my work. While I may not always seek
                 external motivation, my internal drive fuels my continuous quest for learning and self-improvement.</p>
-              <Image src={introvertAboutImage} alt={"Night laptop image"} class="w-56 h-72 rounded-3xl ml-3 mt-5" />
+              
             </div>
             <!-- closing text -->
             <p class="mb-5 mt-10">So, that's a glimpse into who I am—a music enthusiast, a coding aficionado, a
@@ -97,23 +120,23 @@ import SwitchImage from "../img/switch.jpg"
               introvert who thrives on self-reliance. I look forward to the exciting challenges and opportunities that
               the future holds, knowing that every problem I encounter is just another chance to grow.</p>
           </div>
-          <Image src={SwitchImage} alt={"Nintendo Switch image"} class=" h-96  rounded-3xl mt-5" />
+          <Image src={SwitchImage} alt={"Nintendo Switch image"} class=" h-96  rounded-3xl mt-5 ml-auto mr-auto" />
         </div>
         <!-- Link -->
         <div class="text-3xl m-10 flex justify-center gap-10">
           <a href="https://github.com/daupa001xamk" target="_blank">
             <Icon
-              class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+              class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-xl hover:h-20"
               name="mdi:github" width="4rem" height="4rem" />
           </a>
           <a href="https://www.last.fm/user/MrAkuu" target="_blank">
             <Icon
-              class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+              class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-xl hover:h-20"
               name="fa-brands:lastfm-square" width="3.8rem" height="3.8rem" />
           </a>
           <a href="https://osu.ppy.sh/users/3293579" target="_blank">
             <Icon
-              class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+              class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-xl hover:h-20"
               name="simple-icons:osu" size="4rem" />
           </a>
         </div>
@@ -121,8 +144,8 @@ import SwitchImage from "../img/switch.jpg"
     </div>
     </main>
     <!--Projects card -->
-    <section class="flex justify-center flex-row pt-6" id="projects">
-      <div class="w-1/2 p-10 rounded-md shadow-xl bg-gray-700">
+    <section class="lg:flex justify-center xl:flex-row pt-6" id="projects">
+      <div class=" lg:w-1/2 xl:p-10 rounded-md shadow-xl bg-amber-200 dark:bg-gray-700">
         <div class="text-center">
           <h2 class="text-5xl text-orange-500">Projects</h2>
           <!-- this website -->
@@ -130,15 +153,15 @@ import SwitchImage from "../img/switch.jpg"
             <div class="flex py-5 items-center">
               <a href="#" target="_blank">
                 <Icon
-                  class="hover:-translate-y-1 hover:scale-100 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                  class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-xl hover:h-20"
                   name="iconoir:www" width="2.8rem" height="2.8rem" />
               </a>
-              <a class="text-2xl px-3 text-gray-200" href="" target="_blank">This website</a>
+              <a class="text-xl xl:text-2xl px-3 dark:text-gray-200" href="" target="_blank">This website</a>
             </div>
             <div class="flex py-5 items-center">
               <Icon name="simple-icons:astro" width="2.8rem" height="2.8rem" />
               <div>
-                <p class="text-2xl px-3 text-gray-200">(ongoing)
+                <p class="xl:text-2xl px-3 dark:text-gray-200">(ongoing)
               </div>
             </div>
           </div>
@@ -147,10 +170,10 @@ import SwitchImage from "../img/switch.jpg"
             <div class="flex py-5 items-center">
               <a href="https://github.com/daupa001xamk/study-helper" target="_blank">
                 <Icon
-                  class="hover:-translate-y-1 hover:scale-100 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                  class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-xl hover:h-20"
                   name="mdi:cards-outline" width="2.8rem" height="2.8rem" />
               </a>
-              <a class="text-2xl px-3 text-gray-200" href="https://github.com/daupa001xamk/study-helper"
+              <a class="text-xl xl:text-2xl px-3 dark:text-gray-200" href="https://github.com/daupa001xamk/study-helper"
                 target="_blank">Study-helper</a>
             </div>
             <div class="flex py-5 items-center">
@@ -158,7 +181,7 @@ import SwitchImage from "../img/switch.jpg"
               <Icon name="mdi:react" width="2.8rem" height="2.8rem" />
               <Icon name="logos:prisma" width="2.8rem" height="2.8rem" />
               <div>
-                <p class="text-2xl px-3 text-gray-200">(In progress)
+                <p class="xl:text-2xl px-3 dark:text-gray-200">(In progress)
               </div>
             </div>
           </div>
@@ -166,30 +189,30 @@ import SwitchImage from "../img/switch.jpg"
           <div class="flex justify-between items-center py-5">
             <div class="flex py-5 items-center">
               <Icon
-                class="hover:-translate-y-1 hover:scale-100 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-xl hover:h-20"
                 name="ic:outline-menu-book" width="2.8rem" height="2.8rem" />
-              <p class="text-2xl px-3 text-gray-200">WNDeepLReader</p>
+              <p class="text-xl xl:text-2xl px-3 text-gray-500">WNDeepLReader</p>
             </div>
             <div class="flex py-5 items-center">
               <Icon name="mdi:react" width="2.8rem" height="2.8rem" />
               <Icon name="tabler:api" width="2.8rem" height="2.8rem" />
               <div>
               </div>
-              <p class="text-2xl px-3 text-gray-200">(In progress)
+              <p class="xl:text-2xl px-3 text-gray-500">(In progress)
             </div>
           </div>
           <!-- Time manage / diary -->
           <div class="flex justify-between items-center py-5">
             <div class="flex py-5 items-center">
               <Icon
-                class="hover:-translate-y-1 hover:scale-100 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-xl hover:h-20"
                 name="ri:todo-fill" width="2.8rem" height="2.8rem" />
-              <p class="text-2xl px-3 text-gray-200">Time manager / diary</p>
+              <p class="text-xl xl:text-2xl px-3 text-gray-500">Time manager / diary</p>
             </div>
             <div class="flex py-5 items-center">
               <Icon name="mdi:react" width="2.8rem" height="2.8rem" />
               <div>
-                <p class="text-2xl px-3 text-gray-200">(Starting)
+                <p class="xl:text-2xl px-3 text-gray-500">(Starting)
               </div>
             </div>
           </div>
@@ -198,14 +221,14 @@ import SwitchImage from "../img/switch.jpg"
           <div class="flex justify-between items-center py-5">
             <div class="flex py-5 items-center">
               <Icon
-                class="hover:-translate-y-1 hover:scale-100 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-xl hover:h-20"
                 name="ic:baseline-library-music" width="2.8rem" height="2.8rem" />
-              <p class="text-2xl px-3 text-gray-200">Music player</p>
+              <p class="text-xl xl:text-2xl px-3 text-gray-500">Music player</p>
             </div>
             <div class="flex py-5 items-center">
               <Icon name="cib:kotlin" width="1.8rem" height="1.8rem" />
               <div>
-                <p class="text-2xl px-3 text-gray-200">(Planning)
+                <p class="xl:text-2xl px-3 text-gray-500">(Planning)
               </div>
             </div>
           </div>
@@ -213,14 +236,14 @@ import SwitchImage from "../img/switch.jpg"
           <div class="flex justify-between items-center py-5">
             <div class="flex py-5 items-center">
               <Icon
-                class="hover:-translate-y-1 hover:scale-100 duration-500 hover:bg-orange-600 hover:rounded-lg hover:h-20"
+                class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-xl hover:h-20"
                 name="ic:baseline-library-music" width="2.8rem" height="2.8rem" />
-              <p class="text-2xl px-3 text-gray-200">Mini Osu player</p>
+              <p class="text-xl xl:text-2xl px-3 text-gray-500">Mini Osu player</p>
             </div>
             <div class="flex py-5 items-center">
               <Icon name="mdi:language-csharp" width="2.8rem" height="2.8rem" />
               <div>
-                <p class="text-2xl px-3 text-gray-200">(Planning)
+                <p class="xl:text-2xl px-3 text-gray-500">(Planning)
               </div>
             </div>
           </div>
