working github link to webpage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -151,7 +151,7 @@ if (darkModeToggle) {
           <!-- this website -->
           <div class="flex justify-between items-center py-5">
             <div class="flex py-5 items-center">
-              <a href="#" target="_blank">
+              <a href="https://github.com/daupa001xamk/daupa001xamk.github.io" target="_blank">
                 <Icon
                   class="hover:-translate-y-1 hover:scale-150 duration-500 hover:bg-orange-600 hover:rounded-xl hover:h-20"
                   name="iconoir:www" width="2.8rem" height="2.8rem" />
